Fix: consistent spacing for layouts

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -91,12 +91,12 @@
 
         --z-toast: 2001;
         --z-overlay: 2000;
-        --z-shortcuts: 1001;
         --z-header: 1000;
+        --z-banner: 1000;
+        --z-nav: 999;
+        --z-shortcuts: 800;
         --z-logo: 501;
         --z-hero: 500;
-        --z-nav: 999;
-        --z-banner: 1000;
         --z-underlay: 990;
         --z-toc: 900;
 
